# ros_kortex

./: .gitignore  2022-03-18-16-29-15.bag  JointPos.txt
arthur_bringup/: CMakeLists.txt  package.xml
arthur_bringup/launch/: arthur_bringup.launch
arthur_online_calibration/: CMakeLists.txt  package.xml
arthur_online_calibration/launch/: online_calibration.launch
arthur_online_calibration/src/: arthur_online_calibration.cpp
arthur_planning/: CMakeLists.txt  package.xml
arthur_planning/bags/: actual_2022-04-18-17-16-45.bag  actual_2022-04-18-17-31-44.bag  actual_2022-04-18-17-57-04.bag  actual_2022-04-18-18-12-45.bag  actual_2022-04-18-18-29-33.bag  actual_2022-04-18-18-46-00.bag  actual_2022-04-18-18-55-06.bag  actual_2022-04-19-15-28-19.bag  actual_2022-04-19-16-09-50.bag  actual_2022-04-19-17-29-19.bag  actual_2022-04-19-17-38-11.bag  actual_2022-04-19-17-48-06.bag  actual_2022-04-19-18-41-51.bag  actual_2022-04-19-18-50-27.bag  actual_2022-04-19-19-48-31.bag  actual_2022-04-19-19-54-08.bag  actual_2022-04-19-19-56-51.bag  actual_2022-04-19-21-09-06.bag  actual_2022-04-19-21-21-39.bag  actual_2022-04-19-21-32-56.bag  actual_2022-04-19-21-44-25.bag  actual_2022-04-19-21-56-06.bag  gt_2022-04-19-16-09-50.bag  gt_2022-04-19-17-14-19.bag  gt_2022-04-19-17-29-19.bag  gt_2022-04-19-17-38-11.bag  gt_2022-04-19-17-48-06.bag  gt_2022-04-19-17-56-31.bag  gt_2022-04-19-18-23-24.bag  gt_2022-04-19-18-41-51.bag  gt_2022-04-19-18-50-27.bag  gt_2022-04-19-19-48-31.bag  gt_2022-04-19-19-54-08.bag  gt_2022-04-19-19-56-51.bag  gt_2022-04-19-21-09-06.bag  gt_2022-04-19-21-21-39.bag  gt_2022-04-19-21-32-56.bag  gt_2022-04-19-21-44-25.bag  gt_2022-04-19-21-56-06.bag  trajectory_act.bag  (+5 more)
arthur_planning/bags/test_results/: actual_traj.txt  stamped_poses.txt
arthur_planning/launch/: move_group_interface_tutorial.launch
arthur_planning/msg/: arthur_traj.msg
arthur_planning/scripts/: FK_client.py  arthur_planning_node.py  arthur_states_pub.py  pilz_move.py  pilz_test.py  save_actual.py  save_ground_truth.py  send_joint_vel.py  subscribe_trajectory.py  test.py  text_file_read.py  velocity_test.py
arthur_planning/scripts/evaluation/dataset_tools/: bag_to_pose.py
arthur_planning/src/: arthur_planning.cpp  cpp_test.cpp  traj_test.cpp  trajectory_test.cpp
arthur_watchdog/: CMakeLists.txt  controls.cpp  hardware.cpp  inputs.cpp  main.cpp  package.xml  perception.cpp
arthur_watchdog/include/: controls.hpp  hardware.hpp  inputs.hpp  perception.hpp
arthur_watchdog/msg/: arthur_watch.msg  controls.msg  inputs.msg  perception.msg
gen3_arm_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
kortex_bringup/launch/: kortex_bringup.launch
kortex_control/: CMakeLists.txt  package.xml
kortex_control/arm_description/: robot_model.xacro  test.urdf
kortex_control/arms/gen3/7dof/config/: joint_effort_controllers.yaml  joint_effort_group_controllers.yaml
kortex_control/ee_controls/: CMakeLists.txt  package.xml
kortex_control/ee_controls/src/: current_to_force.cpp
kortex_control/ee_controls/src/both_motors/: both_motors.ino
kortex_control/ee_controls/src/force_velocity_control/: currentSensor.cpp  currentSensor.h  force_velocity_control.ino  limitSwitch.cpp  motorControl.cpp  motorControl.h
kortex_control/ee_controls/src/force_velocity_control/force_velocity_control/: force_velocity_control.ino
kortex_control/ee_controls/src/force_velocity_control_old/: force_velocity_control_old.ino
kortex_control/ee_controls/src/limit_switch/: limit_switch.ino
kortex_control/ee_controls/src/old/: old.ino
kortex_control/launch/: priority_control.launch  priority_control_sim.launch
kortex_control/mpc/: Arthur.ipynb  Arthur.jl  ArthurMPC.ipynb  ArthurMPC.jl
kortex_control/mpc/.ipynb_checkpoints/: Arthur-checkpoint.ipynb
kortex_control/mpc/notebooks/: ALTRO Example.ipynb  ARTHuR Test.ipynb  Arthur.ipynb  ArthurBot.py  ArthurMPC-OSQP.ipynb  ArthurMPC.ipynb  ArthurSimulationExample.ipynb  CartpoleExample.ipynb  MeshCatSimulationExample.ipynb  RobotUtil.py
kortex_control/mpc/notebooks/.ipynb_checkpoints/: ALTRO Example-checkpoint.ipynb  Arthur-checkpoint.ipynb  ArthurMPC-OSQP-checkpoint.ipynb  ArthurMPC-checkpoint.ipynb  ArthurSimulationExample-checkpoint.ipynb
kortex_control/mpc/sample_trajectories/: joint_states1.txt  joint_states2.txt
kortex_control/mpc/scripts/: mpc_torques_commander.py  publish_torques.py
kortex_control/mpc/src/: Arthur.jl  ArthurMPC.jl  Controller_Node.jl  Julia2ROS.jl  MPCUtil.jl  MPC_Node  MPC_Node.jl  MPC_Params.jl  Project.toml  Simulation_Node.jl
kortex_control/mpc/src/launch/: test_sim.launch
kortex_control/priority_control/: arthur_robot_model.cpp  camera_alignment_task.cpp  master_controller.cpp  master_controller_old.cpp  pelvis_alignment_task.cpp  priority_controller.cpp  real_dummy_pelvis_broadcaster.cpp  task.cpp  tf_listener.cpp
kortex_control/priority_control/include/: arthur_robot_model.hpp  camera_alignment_task.hpp  pelvis_alignment_task.hpp  priority_controller.hpp  task.hpp
kortex_control/wrench_control/: ee_tf_listener.cpp  wrench_controller.cpp  wrench_controller_old.cpp  wrench_controller_test.cpp
kortex_control/wrench_control/scripts/: ROS_Motor_Control.ino  ftsensor_listener.py
kortex_description/: package.xml
kortex_description/launch/: visualize.launch
kortex_description/robots/: gen3.urdf  gen3.xacro  gen3_collision.xacro  gen3_lite_gen3_lite_2f.xacro  gen3_robotiq_2f_140.xacro  gen3_robotiq_2f_85.xacro  kortex_robot.xacro  kortex_table.xacro  kortex_table_collision.xacro  kortex_table_new.xacro  kortex_table_old.xacro
kortex_description/rviz/: view_robot.rviz
kortex_driver/launch/: kortex_driver.launch
kortex_driver/rviz/: visualization.rviz
kortex_gazebo/: CMakeLists.txt  package.xml
kortex_gazebo/launch/: spawn_controllers.launch  spawn_ground.launch  spawn_kortex_robot.launch  spawn_kortex_velocity_control.launch  spawn_mpc.launch  spawn_mpc_group.launch  start_gazebo.launch
kortex_gazebo/rviz/: moveit.rviz  view_moveit.rviz
kortex_gazebo/scripts/: send_vel_commands.py  (+2 more)
(+52 files in other folders)
