<package>
  <name>kortex_control</name>
  <version>2.2.2</version>
  <description>
    <p>Gazebo ROS Control package for simulated Kortex robots</p>
    <p>This package contains configuration files for the gazebo_ros_control controllers for simulation of Kortex arms</p>
  </description>
  <author email="avannobel@kinova.ca">Alexandre Vannobel</author>
  <maintainer email="avannobel@kinova.ca" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>arthur_planning</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf_model</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>eigen</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>arthur_planning</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>urdf_model</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>eigen</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
